# monitord

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  create-dist.sh  cxxdll.def  dispatcher.lua  win32vars.sh
developer/: set_svn_properties.sh
developer/.svn/: all-wcprops  entries
jthread-1.2.1/: ChangeLog  configure  configure.in  jthread.dsp  jthread.sln  jthread.vcproj  jthread_wce.sln  jthread_wce5.vcproj
jthread-1.2.1/.svn/: all-wcprops  entries
jthread-1.2.1/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  README.TXT.svn-base  jthread.ncb.svn-base  jthread.suo.svn-base  jthread_wce.vcproj.svn-base  jthread_wce5.sln.svn-base
jthread-1.2.1/doc/: Makefile.am
jthread-1.2.1/doc/.svn/: all-wcprops  entries
jthread-1.2.1/doc/.svn/text-base/: Makefile.in.svn-base  manual.tex.svn-base
jthread-1.2.1/pkgconfig/: Makefile.am
jthread-1.2.1/pkgconfig/.svn/: all-wcprops  entries
jthread-1.2.1/pkgconfig/.svn/text-base/: Makefile.in.svn-base  jthread-uninstalled.pc.in.svn-base  jthread.pc.in.svn-base
jthread-1.2.1/src/: Makefile.am  jmutex.h
jthread-1.2.1/src/.svn/: all-wcprops  entries
jthread-1.2.1/src/.svn/text-base/: Makefile.in.svn-base
jthread-1.2.1/src/pthread/.svn/: all-wcprops  entries
jthread-1.2.1/src/win32/.svn/: all-wcprops  entries
lame-3.97/.svn/: all-wcprops  entries
lame-3.97/ACM/.svn/: all-wcprops  entries
lame-3.97/ACM/ADbg/.svn/: all-wcprops  entries
lame-3.97/ACM/ddk/.svn/: all-wcprops  entries
lame-3.97/ACM/tinyxml/.svn/: all-wcprops  entries
lame-3.97/Dll/.svn/: all-wcprops  entries
lame-3.97/debian/.svn/: all-wcprops  entries
lame-3.97/doc/.svn/: all-wcprops  entries
lame-3.97/doc/html/.svn/: all-wcprops  entries
lame-3.97/doc/man/.svn/: all-wcprops  entries
lame-3.97/dshow/.svn/: all-wcprops  entries
lame-3.97/frontend/.svn/: all-wcprops  entries
lame-3.97/include/.svn/: all-wcprops  entries
lame-3.97/libmp3lame/.svn/: all-wcprops  entries
lame-3.97/libmp3lame/i386/.svn/: all-wcprops  entries
lame-3.97/mac/.svn/: all-wcprops  entries
lame-3.97/misc/.svn/: all-wcprops  entries
lame-3.97/mpglib/.svn/: all-wcprops  entries
lame/.svn/: all-wcprops  entries
m4/: alsa.m4
m4/.svn/: all-wcprops  entries
monitord/: Monitor.cpp  MonitorAudio.cpp  MonitorAudio.h  MonitorConfiguration.cpp  MonitorConfiguration.h  MonitorExceptions.h  MonitorLogging.h  MonitorModuleFMS.cpp  MonitorModuleFMS.h  MonitorModulePocsag.cpp  MonitorModulePocsag1200.cpp  MonitorModulePocsag1200.h  MonitorModulePocsag512.cpp  MonitorModuleZVEI.cpp  MonitorModuleZVEI.h  MonitorModules.h  MonitorModulesResults.cpp  MonitorModulesResults.h  MonitorSignals.cpp  MonitorSignals.h  PluginThread.cpp  SndPipe.cpp  SndPipe.h  SocketServer.cpp  SocketServer.h  SocketThreadCrusader.cpp  SocketThreadCrusader.h  SocketThreadFMS32.cpp  SocketThreadMonitord.cpp  SocketThreadMonitord.h  base64.cpp  costab.cpp  memlock.h  regexp.cpp  regexp.h  xmltools.h
monitord/.svn/: all-wcprops  dir-prop-base  entries
monitord/.svn/text-base/: Monitor.h.svn-base  MonitorConfiguration.cpp.svn-base  MonitorConfiguration.h.svn-base  MonitorExceptions.h.svn-base  MonitorLogging.h.svn-base  MonitorModuleFMS.cpp.svn-base  MonitorModulePocsag.cpp.svn-base  MonitorModulePocsag.h.svn-base  MonitorModulePocsag512.h.svn-base  MonitorModuleZVEI.cpp.svn-base  MonitorModules.cpp.svn-base  MonitorModules.h.svn-base  MonitorModulesResults.h.svn-base  MonitorSignals.cpp.svn-base  PluginThread.cpp.svn-base  PluginThread.h.svn-base  SocketThreadFMS32.cpp.svn-base  SocketThreadFMS32.h.svn-base  SocketThreadMonitord.cpp.svn-base  base64.h.svn-base  convert.h.svn-base  doxygen.config.svn-base  lua.hpp.svn-base  memlock.cpp.svn-base  xmltools.cpp.svn-base
monitord/generators/: Buffer.h  Generator.cpp  GeneratorFMS.h
monitord/generators/.svn/: all-wcprops  entries
monitord/generators/.svn/text-base/: Buffer.cpp.svn-base  Generator.h.svn-base  GeneratorFMS.cpp.svn-base  GeneratorZVEI.cpp.svn-base  GeneratorZVEI.h.svn-base
monitord/plugins/: base64.cpp  base64.h  dll-elf.cpp  dll-win32.cpp  dll.h  libmplugin_activemq.cpp  libmplugin_activemq.h  libmplugin_activemq.la  libmplugin_audiorecorder.cpp  libmplugin_audiorecorderSOX.cpp  libmplugin_mysql.cpp  mplugin.h  mpluginAudio.cpp
monitord/plugins/.svn/: all-wcprops  entries
monitord/plugins/.svn/text-base/: dll-win32.cpp.svn-base  dll.h.svn-base  libmplugin_audiorecorderSOX.cpp.svn-base  mplugin.cpp.svn-base  mpluginAudio.h.svn-base
monitord/plugins/libmplugin_activemq/: MonitorPluginActiveMqTestSuite.h  unittest.sh
monitord/posix/: MonitorAudioALSA.cpp  MonitorAudioALSA.h  MonitorAudioOSS.cpp  MonitorAudioOSS.h
monitord/posix/.svn/: all-wcprops  entries
monitord/win32/: MonitorAudioWin32.cpp  MonitorService.cpp  MonitorService.h
monitord/win32/.svn/: all-wcprops  entries
sample-config/: monitord_mysql_tables.sql  pluginfilter.lua
sample-config/.svn/: all-wcprops  entries
sample-config/.svn/text-base/: monitord.xml.linux.svn-base  monitord.xml.win32.svn-base  socketfilter.lua.svn-base
scripts/: monitord-start-stop  watchdog_monitord.sh
simpleopt/: SimpleGlob.h  runtests.txt
simpleopt/.svn/: all-wcprops  entries
simpleopt/.svn/text-base/: SimpleOpt.h.svn-base  runtests.cmd.svn-base
win32-nsis/: _stop.bat
win32-nsis/.svn/: all-wcprops  dir-prop-base  entries
win32-nsis/.svn/text-base/: _install-service.bat.svn-base  _start.bat.svn-base  _uninstall-service.bat.svn-base  license.txt.svn-base  monitor.nsi.in.svn-base  monitord.nsi.svn-base
xmlParser/: outputTestUTF8.xml  test.xml  xmlParser.html  xmlParser.sln  xmlParser.vcproj  xmlParserDLL.vcproj  xmlParserUnicode.vcproj  xmlTest.cpp  xmlTestUnicode.cpp
xmlParser/.svn/: all-wcprops  dir-prop-base  entries
xmlParser/.svn/text-base/: Readme.txt.svn-base  makefile.solaris.svn-base  makefile.svn-base  utf8test.xml.svn-base  xmlParser.cpp.svn-base  xmlParser.h.svn-base  xmlParser.ncb.svn-base  xmlParser.suo.svn-base  xmlParserTestDLL.vcproj.svn-base
(+4 files in other folders)
